[package]
name = "zsp-core"
version = "0.1.0"
edition = "2021"
workspace = "../"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
substring = "1.4.5"
json="*"
termcolor = "*"
libloading="*"
zsp-macros = {path="../macros"}
serde = "*"
serde_json = "*"
colored = "*"
dyn-clone="*" 
[[bin]]
name = "zsp"
path = "src/main.rs"