[package]
name = "zsp-http"
version = "0.1.0"
edition = "2021"
workspace = "../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zsp-core = {path = "../../core"}
reqwest = { version = "0.11", features = ["blocking", "json"] }

[lib]
crate-type = ["cdylib"]